[package]
edition = "2021"
name = "google-cloud-storage"
version = "0.1.0"

[dependencies]
bytes = "1.1"
google-cloud-auth = {path = "../auth"}
http = "0.2"
reqwest = {version = "0.11", features = ["json", "multipart"]}
rustc_version_runtime = "0.2.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.12"}

[dev-dependencies]
http = {version = "0.2"}
tokio = {version = "1.12", features = ["full", "macros"]}
