[package]
name = "test-mds"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
auth = { path = "../src/auth", package = "gcp-sdk-auth" }
reqwest     = { version = "0.12.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }

