# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name                 = "user-guide-samples"
description          = "Samples for the User Guide"
version              = "0.0.0"
publish              = false
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[[bin]]
name = "getting_started"

[dependencies]
# ANCHOR: longrunning
google-cloud-longrunning = { version = "0.25.2", path = "../../src/generated/longrunning" }
# ANCHOR_END: longrunning
# ANCHOR: language
google-cloud-language-v2 = { version = "0.4.2", path = "../../src/generated/cloud/language/v2" }
# ANCHOR_END: language
google-cloud-rpc = { version = "0.4.2", path = "../../src/generated/rpc/types" }
google-cloud-wkt = { version = "0.5.2", path = "../../src/wkt" }

# ANCHOR: speech
[dependencies.google-cloud-speech-v2]
version = "0.4.2"
# ANCHOR_END: speech
path = "../../src/generated/cloud/speech/v2"

# ANCHOR: storage
[dependencies.google-cloud-storage]
version = "0.25.0-preview4"
# ANCHOR_END: storage
path = "../../src/storage"

# ANCHOR: serde_json
[dependencies.serde_json]
workspace = true
# ANCHOR_END: serde_json

# ANCHOR: secretmanager
[dependencies.google-cloud-secretmanager-v1]
version = "0.4.2"
# ANCHOR_END: secretmanager
path = "../../src/generated/cloud/secretmanager/v1"

# ANCHOR: aiplatform
[dependencies.google-cloud-aiplatform-v1]
version          = "0.4.2"
default-features = false
features         = ["prediction-service"]
# ANCHOR_END: aiplatform
path = "../../src/generated/cloud/aiplatform/v1"

# ANCHOR: crc32c
[dependencies.crc32c]
version = "0.6"
# ANCHOR_END: crc32c

# ANCHOR: futures
[dependencies.futures]
version = "0.3"
# ANCHOR_END: futures

# ANCHOR: lro-with-streams
# ANCHOR: lro
[dependencies.google-cloud-lro]
version = "0.3.2"
# ANCHOR_END: lro
features = ["unstable-stream"]
# ANCHOR_END: lro-with-streams
path = "../../src/lro"

# ANCHOR: gax-with-streams
# ANCHOR: gax
[dependencies.google-cloud-gax]
version = "0.23.2"
# ANCHOR_END: gax
features = ["unstable-stream"]
# ANCHOR_END: gax-with-streams
path = "../../src/gax"

# ANCHOR: mockall
[dev-dependencies]
mockall = "0.13"
# ANCHOR_END: mockall
anyhow.workspace            = true
bytes.workspace             = true
rand                        = "0.9"
test-case.workspace         = true
integration-tests.workspace = true

# ANCHOR: tokio
[dependencies.tokio]
version  = "1"
features = ["full", "macros"]
# ANCHOR_END: tokio

[features]
run-integration-tests = []
log-integration-tests = []
