# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name                 = "user-guide-samples"
description          = "Samples for the User Guide"
version              = "0.0.0"
publish              = false
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[[bin]]
name = "getting_started"

[[bin]]
name = "run-list_jobs"
path = "src/run/list_jobs.rs"

[[bin]]
name = "run-create_job"
path = "src/run/create_job.rs"

[[bin]]
name = "run-get_job"
path = "src/run/get_job.rs"

[[bin]]
name = "run-update_job"
path = "src/run/update_job.rs"

[[bin]]
name = "run-delete_job"
path = "src/run/delete_job.rs"

[[bin]]
name = "run-run_job"
path = "src/run/run_job.rs"







[dependencies]
anyhow.workspace                        = true
crc32c.workspace                        = true
futures.workspace                       = true
google-cloud-aiplatform-v1              = { workspace = true, default-features = false, features = ["prediction-service"] }
google-cloud-gax                        = { workspace = true, features = ["unstable-stream"] }
google-cloud-language-v2.workspace      = true
google-cloud-longrunning.workspace      = true
google-cloud-lro                        = { workspace = true, features = ["unstable-stream"] }
google-cloud-rpc.workspace              = true
google-cloud-secretmanager-v1.workspace = true
google-cloud-iam-v1 = { workspace = true }
google-cloud-run-v2.workspace = true
google-cloud-speech-v2.workspace        = true
google-cloud-storage.workspace          = true
google-cloud-wkt.workspace              = true
serde_json.workspace                    = true
tokio                                   = { workspace = true, features = ["full", "macros"] }

[dev-dependencies]
anyhow.workspace            = true
bytes.workspace             = true
storage-samples.workspace   = true
integration-tests.workspace = true
mockall.workspace           = true
rand.workspace              = true
tempfile.workspace          = true
test-case.workspace         = true

[features]
run-integration-tests = []
log-integration-tests = []
run-large-downloads   = []
