# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name                 = "user-guide-samples"
description          = "Samples for the User Guide"
version              = "0.0.0"
publish              = false
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[[bin]]
name = "getting_started"

[[bin]]
name = "run-list_jobs"
path = "src/run/list_jobs.rs"

[[bin]]
name = "run-create_job"
path = "src/run/create_job.rs"

[[bin]]
name = "run-get_job"
path = "src/run/get_job.rs"

[[bin]]
name = "run-update_job"
path = "src/run/update_job.rs"

[[bin]]
name = "run-delete_job"
path = "src/run/delete_job.rs"

[[bin]]
name = "run-run_job"
path = "src/run/run_job.rs"

[[bin]]
name = "run-create_service"
path = "src/run/create_service.rs"

[[bin]]
name = "run-get_service"
path = "src/run/get_service.rs"

[[bin]]
name = "run-list_services"
path = "src/run/list_services.rs"

[[bin]]
name = "run-update_service"
path = "src/run/update_service.rs"

[[bin]]
name = "run-delete_service"
path = "src/run/delete_service.rs"

[[bin]]
name = "run-get_revision"
path = "src/run/get_revision.rs"

[[bin]]
name = "run-list_revisions"
path = "src/run/list_revisions.rs"

[[bin]]
name = "run-delete_revision"
path = "src/run/delete_revision.rs"



[[bin]]
name = "secretmanager-list_secrets"
path = "src/secretmanager/list_secrets.rs"

[[bin]]
name = "secretmanager-create_secret"
path = "src/secretmanager/create_secret.rs"

[[bin]]
name = "secretmanager-add_secret_version"
path = "src/secretmanager/add_secret_version.rs"

[[bin]]
name = "secretmanager-get_secret"
path = "src/secretmanager/get_secret.rs"

[[bin]]
name = "secretmanager-update_secret"
path = "src/secretmanager/update_secret.rs"

[[bin]]
name = "secretmanager-delete_secret"
path = "src/secretmanager/delete_secret.rs"

[[bin]]
name = "secretmanager-list_secret_versions"
path = "src/secretmanager/list_secret_versions.rs"

[[bin]]
name = "secretmanager-get_secret_version"
path = "src/secretmanager/get_secret_version.rs"

[[bin]]
name = "secretmanager-access_secret_version"
path = "src/secretmanager/access_secret_version.rs"

[[bin]]
name = "secretmanager-disable_secret_version"
path = "src/secretmanager/disable_secret_version.rs"

[[bin]]
name = "secretmanager-enable_secret_version"
path = "src/secretmanager/enable_secret_version.rs"

[[bin]]
name = "secretmanager-destroy_secret_version"
path = "src/secretmanager/destroy_secret_version.rs"

[[bin]]
name = "secretmanager-get_iam_policy"
path = "src/secretmanager/get_iam_policy.rs"

[[bin]]
name = "secretmanager-set_iam_policy"
path = "src/secretmanager/set_iam_policy.rs"

[[bin]]
name = "secretmanager-test_iam_permissions"
path = "src/secretmanager/test_iam_permissions.rs"































[dependencies]
anyhow.workspace                        = true
crc32c.workspace                        = true
futures.workspace                       = true
google-cloud-aiplatform-v1              = { workspace = true, default-features = false, features = ["prediction-service"] }
google-cloud-gax                        = { workspace = true, features = ["unstable-stream"] }
google-cloud-language-v2.workspace      = true
google-cloud-longrunning.workspace      = true
google-cloud-lro                        = { workspace = true, features = ["unstable-stream"] }
google-cloud-rpc.workspace              = true
google-cloud-secretmanager-v1.workspace = true
prost-types = { workspace = true }
google-cloud-iam-v1 = { workspace = true }
google-cloud-run-v2.workspace = true
google-cloud-speech-v2.workspace        = true
google-cloud-storage.workspace          = true
google-cloud-wkt.workspace              = true
serde_json.workspace                    = true
tokio                                   = { workspace = true, features = ["full", "macros"] }

[dev-dependencies]
anyhow.workspace            = true
bytes.workspace             = true
storage-samples.workspace   = true
integration-tests.workspace = true
mockall.workspace           = true
rand.workspace              = true
tempfile.workspace          = true
test-case.workspace         = true

[features]
run-integration-tests = []
log-integration-tests = []
run-large-downloads   = []
