# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-auth-internal"
version     = "0.1.0"
description = "Google Cloud Client Libraries for Rust - Internal Authentication Traits"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
http.workspace        = true
serde.workspace       = true
thiserror.workspace   = true
wkt.workspace         = true
tokio                 = { workspace = true, features = ["time"] }

[dev-dependencies]
test-case.workspace = true

[features]
# DO NOT USE: this allows us to detect semver changes in types used in the
# implementation of client libraries. None of the types or functions gated
# by this feature are intended for general use. We do not plan to document these
# features and offer no guarantees on their stability.
_internal-semver = []

[lints]
workspace = true
