# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-auth"
version     = "0.21.0"
description = "Google Cloud Client Libraries for Rust - Authentication"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait    = "0.1"
http           = "1"
reqwest        = { version = "0.12", features = ["json"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "2"
time           = { version = "0.3", features = ["serde"] }
rustls         = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-pemfile = "2"
tokio          = { version = "1", features = ["fs"] }
base64         = "0.22"
bon            = "3"
# Local dependencies
gax.workspace = true

[dev-dependencies]
axum.workspace      = true
mockall             = "0.13"
rand                = "0.8"
regex               = "1"
rsa                 = { version = "0.9", features = ["pem"] }
scoped-env          = "2"
serial_test         = "3"
tempfile            = "3"
test-case.workspace = true
tokio               = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tokio-test          = "0.4"
url                 = "2"
mutants.workspace   = true
