# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "google-cloud-auth"
# ATTENTION: if you change the major version, remember to change the major
#     version of all downstream dependencies. For details see:
#         https://github.com/googleapis/google-cloud-rust/issues/3237
#         https://github.com/googleapis/google-cloud-rust/issues/3265
version     = "1.3.0"
description = "Google Cloud Client Libraries for Rust - Authentication"
build       = "build.rs"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace      = true
http.workspace        = true
reqwest               = { workspace = true, features = ["json", "rustls-tls"] }
rustls                = { workspace = true, features = ["logging", "ring", "std", "tls12"] }
rustls-pemfile        = { workspace = true, features = ["std"] }
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
time                  = { workspace = true, features = ["serde"] }
tokio                 = { workspace = true, features = ["fs", "process"] }
bon.workspace         = true
hex                   = { workspace = true, features = ["std"] }
jsonwebtoken          = { workspace = true, features = ["rust_crypto"], optional = true }
# Local dependencies
gax.workspace = true

[dev-dependencies]
anyhow.workspace      = true
httptest.workspace    = true
mockall.workspace     = true
regex.workspace       = true
rsa                   = { workspace = true, features = ["pem"] }
scoped-env.workspace  = true
serial_test.workspace = true
tempfile.workspace    = true
test-case.workspace   = true
tokio                 = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-test.workspace  = true
url.workspace         = true
mutants.workspace     = true

[features]
default = []
idtoken = ["jsonwebtoken"]

[lints]
workspace = true
