# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "google-cloud-auth"
# ATTENTION: if you change the major version, remember to change the major
#     version of all downstream dependencies. For details see:
#         https://github.com/googleapis/google-cloud-rust/issues/3237
#         https://github.com/googleapis/google-cloud-rust/issues/3265
version     = "1.4.0"
description = "Google Cloud Client Libraries for Rust - Authentication"
build       = "build.rs"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace      = true
bytes.workspace       = true
http.workspace        = true
reqwest               = { workspace = true, features = ["json", "rustls-tls"] }
rustls                = { workspace = true, features = ["logging", "ring", "std", "tls12"] }
rustls-pki-types      = { workspace = true, features = ["std"] }
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
time                  = { workspace = true, features = ["serde"] }
tokio                 = { workspace = true, features = ["fs", "process"] }
jsonwebtoken          = { workspace = true, optional = true }
# Local dependencies
gax.workspace = true

[dev-dependencies]
anyhow.workspace      = true
httptest.workspace    = true
mockall.workspace     = true
regex.workspace       = true
rsa                   = { workspace = true, features = ["pem"] }
scoped-env.workspace  = true
serial_test.workspace = true
tempfile.workspace    = true
test-case.workspace   = true
tokio                 = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-test.workspace  = true
url.workspace         = true
mutants.workspace     = true

[features]
default = ["default-idtoken-backend"]
# The `idtoken` feature enables support to create and validate OIDC ID Tokens.
# See the create top-level documentation for more information.
idtoken = ["dep:jsonwebtoken"]
# By default this crate enables the `rust_crypto` backend. Applications can
# link `google-cloud-auth` with `default-features = false, feature = ["idtoken"]
# to select the backend themselves.
default-idtoken-backend = ["jsonwebtoken?/rust_crypto"]
# Do not use, this was a mistake in the 1.3 release.
jsonwebtoken = ["dep:jsonwebtoken"]

[lints]
workspace = true
