# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-bigquery"
publish     = false
version     = "0.0.0"
description = "Google Cloud Client Libraries for Rust - BigQuery"
# Inherit other attributes from the workspace.
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true

[dependencies]
auth.workspace        = true
async-trait.workspace = true
bytes.workspace       = true
http.workspace        = true
lazy_static.workspace = true
prost.workspace       = true
prost-types.workspace = true
serde.workspace       = true
serde_json.workspace  = true
serde_with.workspace  = true
tonic.workspace       = true
tokio                 = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace     = true
# Local crates
gax.workspace   = true
gaxi.workspace  = true
gtype.workspace = true
# bigquery_v2.workspace = true
rpc.workspace = true
wkt.workspace = true
thiserror     = { workspace = true }
chrono        = { workspace = true, features = ["serde"] }
base64        = { workspace = true }

[dependencies.bigquery_v2]
package = "google-cloud-bigquery-v2"
path    = "../generated/cloud/bigquery/v2"

[dev-dependencies]
tokio-test.workspace = true
