# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description       = "Google Cloud client libraries for Rust: endurance test"
edition.workspace = true
name              = "endurance-test"
publish           = false
version           = "0.0.0"

[dependencies.sm]
package = "google-cloud-secretmanager-v1"
path    = "../../src/generated/cloud/secretmanager/v1"

[dependencies]
anyhow.workspace     = true
bytes.workspace      = true
crc32c.workspace     = true
futures.workspace    = true
serde_json.workspace = true
tokio.workspace      = true
# Local dependencies
gax.workspace = true
