# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-firestore"
publish     = false
version     = "0.0.0"
description = "Google Cloud Client Libraries for Rust - Firestore"
# Inherit other attributes from the workspace.
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
repository.workspace = true

[dependencies]
bytes       = { version = "1", features = ["serde"] }
prost       = "0.13"
prost-types = "0.13"
serde       = { version = "1", features = ["serde_derive"] }
serde_json  = { version = "1" }
serde_with  = { version = "3", default-features = false, features = ["base64", "macros", "std"] }
tonic       = "0.12"
tokio       = { version = "1.42", features = ["macros", "rt-multi-thread"] }
# Local crates
auth  = { version = "0.18.0", path = "../auth", package = "google-cloud-auth" }
gax   = { version = "0.20.0", path = "../gax", package = "google-cloud-gax" }
gtype = { version = "0.1", path = "../generated/type", package = "google-cloud-type" }
rpc   = { version = "0.1", path = "../generated/rpc/types", package = "google-cloud-rpc" }
wkt   = { version = "0.1", path = "../wkt", package = "google-cloud-wkt" }

[features]
unstable-stream = []
