# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-firestore"
publish     = false
version     = "0.0.0"
description = "Google Cloud Client Libraries for Rust - Firestore"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait           = { version = "0.1" }
bytes                 = { version = "1", features = ["serde"] }
http                  = "1"
lazy_static           = "1"
prost.workspace       = true
prost-types.workspace = true
serde                 = { version = "1", features = ["serde_derive"] }
serde_json            = { version = "1" }
serde_with            = { version = "3", default-features = false, features = ["base64", "macros", "std"] }
tonic.workspace       = true
tokio                 = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing               = "0.1"
# Local crates
gax.workspace   = true
gaxi            = { workspace = true, features = ["_internal-common", "_internal-grpc-client"] }
gtype.workspace = true
rpc.workspace   = true
wkt.workspace   = true

[dev-dependencies]
anyhow.workspace     = true
tokio                = { version = "1", features = ["full", "macros"] }
tokio-test.workspace = true
