# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-firestore"
publish     = false
version     = "0.0.0"
description = "Google Cloud Client Libraries for Rust - Firestore"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace       = true
http.workspace        = true
lazy_static.workspace = true
prost.workspace       = true
prost-types.workspace = true
serde.workspace       = true
serde_json.workspace  = true
serde_with.workspace  = true
tonic.workspace       = true
tokio                 = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace     = true
# Local crates
gax.workspace   = true
gaxi            = { workspace = true, features = ["_internal-common", "_internal-grpc-client"] }
gtype.workspace = true
rpc.workspace   = true
wkt.workspace   = true

[features]
default = ["default-rustls-provider"]
# Enabled by default. Use the default rustls crypto provider ([aws-lc-rs]) for
# TLS and authentication. Applications with specific requirements for
# cryptography (such as exclusively using the [ring] crate) should disable this
# default and call `rustls::CryptoProvider::install_default()`.
default-rustls-provider = ["gaxi/_default-rustls-provider"]

[dev-dependencies]
anyhow.workspace     = true
tokio                = { workspace = true, features = ["full", "macros"] }
tokio-test.workspace = true

[lints]
workspace = true
