# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-gax-internal"
version     = "0.1.0"
description = "Google Cloud Client Libraries for Rust - Implementation Details"
build       = "build.rs"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# Disable all features during document generation. All the types in this crate
# are implementation details, and subject to change without notice.
features = []

[features]
_internal_http_client = [
  "_internal_common",
  "dep:auth",
  "dep:reqwest",
  "dep:rpc",
  "dep:serde",
  "dep:serde_json",
  "dep:tokio",
  "gax/unstable-sdk-client",
]
_internal_grpc_client = [
  "_internal_common",
  "dep:auth",
  "dep:gax",
  "dep:prost",
  "dep:prost-types",
  "dep:rpc",
  "dep:serde_json",
  "dep:tokio",
  "dep:tonic",
  "dep:wkt",
]
_internal_common = ["dep:auth", "dep:gax", "dep:percent-encoding", "dep:thiserror"]

[dependencies]
bytes            = { version = "1", features = ["serde"] }
http             = "1"
http-body-util   = "0.1"
percent-encoding = { workspace = true, optional = true }
prost            = { workspace = true, optional = true }
prost-types      = { workspace = true, optional = true }
reqwest          = { version = "0.12", optional = true }
serde            = { version = "1", optional = true }
serde_json       = { version = "1", optional = true }
thiserror        = { version = "2", optional = true }
tokio            = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
tonic            = { workspace = true, optional = true }
# Local crates
auth = { workspace = true, optional = true }
gax  = { workspace = true, features = ["unstable-sdk-client"], optional = true }
rpc  = { workspace = true, optional = true }
wkt  = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace    = true
axum.workspace      = true
bytes               = "1"
mockall             = "0.13"
scoped-env          = "2"
serde_with          = "3"
serial_test         = "3"
test-case.workspace = true
tokio               = { version = "1", features = ["test-util"] }
# Local crates
echo-server = { path = "echo-server" }
grpc-server = { path = "grpc-server" }

[build-dependencies]
rustc_version = "0.4"
