# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "google-cloud-gax-internal"
version     = "0.4.0-rc2"
description = "Google Cloud Client Libraries for Rust - Implementation Details"
build       = "build.rs"
# Inherit other attributes from the workspace.
authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# Disable all features during document generation. All the types in this crate
# are implementation details, and subject to change without notice.
features = []

[features]
_internal-http-client = [
  "_internal-common",
  "dep:auth",
  "dep:bytes",
  "dep:gax",
  "dep:http",
  "dep:http-body-util",
  "dep:reqwest",
  "dep:rpc",
  "dep:serde",
  "dep:serde_json",
  "dep:tokio",
]
_internal-grpc-client = [
  "_internal-common",
  "dep:auth",
  "dep:bytes",
  "dep:gax",
  "dep:http",
  "dep:prost",
  "dep:prost-types",
  "dep:rpc",
  "dep:serde_json",
  "dep:tokio",
  "dep:tonic",
  "dep:wkt",
]
_internal-common = ["dep:auth", "dep:gax", "dep:percent-encoding", "dep:thiserror"]

[dependencies]
bytes            = { workspace = true, optional = true, features = ["serde"] }
http             = { workspace = true, optional = true, features = ["std"] }
http-body-util   = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }
prost            = { workspace = true, optional = true }
prost-types      = { workspace = true, optional = true }
reqwest          = { workspace = true, optional = true }
serde            = { workspace = true, optional = true }
serde_json       = { workspace = true, optional = true }
thiserror        = { workspace = true, optional = true }
tokio            = { workspace = true, optional = true, features = ["macros", "rt-multi-thread"] }
tonic            = { workspace = true, optional = true }
# Local crates
auth = { workspace = true, optional = true }
gax  = { workspace = true, optional = true }
rpc  = { workspace = true, optional = true }
wkt  = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace      = true
axum                  = { workspace = true, features = ["http2", "json", "query", "tokio"] }
bytes.workspace       = true
mockall.workspace     = true
scoped-env.workspace  = true
serde_with.workspace  = true
serial_test.workspace = true
test-case.workspace   = true
tokio                 = { workspace = true, features = ["test-util"] }
# Local crates
echo-server = { path = "echo-server" }
grpc-server = { path = "grpc-server" }

[build-dependencies]
rustc_version.workspace = true
